<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="9dp"
    tools:context="com.solanacode.challange.userpaid.fragement.RegisterFragment">

    <LinearLayout
        android:id="@+id/linearRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/daftar"
            android:layout_gravity="center"
            android:contentDescription="@string/registerlogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:text="@string/please_do_registration" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:layout_marginTop="10dp"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etusernmaeReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_username_reg">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etnamaReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/your_name">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpasswordReg"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_password_reg">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/satu"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorTextSecondary">
        </Button>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/reglogin"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>