<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="9dp"
    tools:context="com.solanacode.challange.userpaid.fragement.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:src="@drawable/tokyo"/>

        <TextView
            android:id="@+id/tvusernameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:text="Username Profile" />
        <TextView
            android:id="@+id/tvnameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:text="@string/name" />

        <Button
            android:id="@+id/btnpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/update"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorThemeExtra">
        </Button>

        <Button
            android:id="@+id/btnchangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/indonesian_language"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorgreen">
        </Button>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/logout_profile"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>