<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    tools:context="com.solanacode.challange.userpaid.fragement.DetailMovieFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/sliderView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewFadingEdge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/bck_padding"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/sliderView" />

            <LinearLayout
                android:id="@+id/layoutSliderIndicators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="@id/viewFadingEdge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageTVShow" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageTVShow"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/banner"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/sliderView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sliderView"
                app:riv_corner_radius="@dimen/_6sdp" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:ellipsize="end"
                android:fontFamily="@font/bold"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="Castle in the Sky"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageTVShow"
                app:layout_constraintTop_toBottomOf="@id/sliderView" />

            <TextView
                android:id="@+id/tvjapanTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="天空の城ラピュタ"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/textName"
                app:layout_constraintStart_toStartOf="@id/textName"
                app:layout_constraintTop_toBottomOf="@id/textName" />

            <TextView
                android:id="@+id/tvOriTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="Tenkū no shiro Rapyuta"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/textName"
                app:layout_constraintStart_toStartOf="@id/textName"
                app:layout_constraintTop_toBottomOf="@id/tvjapanTitle" />

            <TextView
                android:id="@+id/tvRealaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="1986"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@id/textName"
                app:layout_constraintStart_toStartOf="@id/textName"
                app:layout_constraintTop_toBottomOf="@id/tvOriTitle" />

            <!--  ExpandableTextView Container -->
            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                expandableTextView:animDuration="100"
                app:layout_constraintTop_toBottomOf="@+id/imageTVShow"
                expandableTextView:maxCollapsedLines="5">

                <!-- simple text view  -->
                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <!-- expandable ImageButton -->
                <ImageButton
                    android:layout_marginRight="@dimen/_5sdp"
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <View
                android:id="@+id/viewDivider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/colorTextSecondary"

                app:layout_constraintTop_toBottomOf="@id/textDescription" />

            <LinearLayout
                android:id="@+id/layoutMisc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/viewDivider1">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_star"
                    app:tint="@color/colorTextOther" />

                <TextView
                    android:id="@+id/textRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="95"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/bold"
                    android:includeFontPadding="false"
                    android:text="@string/u2022"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:id="@+id/textRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"
                    android:text="124"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <View
                android:id="@+id/viewDivider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/colorTextSecondary"
                app:layout_constraintTop_toBottomOf="@id/layoutMisc" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:gravity="center"
                android:text="@string/website"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/colorTextSecondary"
                app:cornerRadius="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewDivider2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <!--    <ProgressBar-->
    <!--        android:layout_width="@dimen/_25sdp"-->
    <!--        android:layout_height="@dimen/_25sdp"-->
    <!--        android:indeterminate="true"-->
    <!--        android:indeterminateTint="@color/colorhead"-->
    <!--        android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/imageWatchList"-->
    <!--        android:layout_width="@dimen/_35sdp"-->
    <!--        android:layout_height="@dimen/_35sdp"-->
    <!--        android:layout_marginStart="@dimen/_20sdp"-->
    <!--        android:layout_marginEnd="@dimen/_20sdp"-->
    <!--        android:layout_marginBottom="@dimen/_20sdp"-->
    <!--        android:background="@drawable/background_fab"-->
    <!--        android:contentDescription="@string/app_name"-->
    <!--        android:padding="@dimen/_8sdp"-->
    <!--        android:src="@drawable/ic_watch_list"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:tint="@color/colorTextIcons" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
